# cto_transfert

./: .env  .gitignore  attack_endpoint.py  infinity_embedder.py  interact_panel.md  interact_panel.py  links.txt  requirements.txt  test_function_calling_ollama.py  test_websocket.py  whoosh_demo.py  ws_hook.py
.venv2/: pyvenv.cfg
HF/: LLMAAS_pixtral.py  deepseek-vl-7b.py  phi4.py  pixtral.py
agents/: LangGraph_agent copy.py  LangGraph_agent.py  LangGraph_agent_tool_direct.py  LangGraph_agent_tool_direct_interrupt.py  Langgraph_agent_blague.py  agent_strucu_pydantic.py  agent_with_add_tool.py  agno_team.py  demo_trend_analysis.py  doc_extration.py  langgraph_add_tool_example.py  langgraph_trend_analysis_agent.py  prepare_sqlite_database.py  simple_agent_with_tool.py
agents/prompts/: prompts.py
agents/utils/: GraphQuery.py
api/: agent_langgraph_router_blague.py  lazy_imports.py  main.py  rest.py  settings.py  websocket.py
api/models/: websocket.py
api/routes/: agent_langgraph_router.py  (+3 more)
app/: chat_app.py
compare/: agent_base.py  chatbot_websocket.py  session_manager.py  v1_router.py  websocket_router.py
langgraph_stream/: README.md  main.py  pyproject.toml  requirements.txt  setup_env.sh
langgraph_stream/agent/: __init__.py  nodes.py  workflow.py
langgraph_stream/api/: __init__.py  websocket_server.py
langgraph_stream/app/: app.js  index.html  styles.css
llmaas/: function_calling_test.py
process/: prompt.txt
prodtracker/: analysept.py
product_index/: MAIN_gogdc54wysob88fq.seg  _MAIN_1.toc
tests/: conftest.py  test_agno_team.py
(+8 files in other folders)
