[project]
name = "langgraph_stream"
version = "0.1.0"
description = "Projet LangGraph avec streaming WebSocket"
readme = "README.md"
requires-python = ">=3.9"

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "I"]
ignore = []

[tool.ruff.isort]
known-first-party = ["agent", "api", "app"]
